# ncs

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  xmake.lua
include/ncs/: cli.hpp  command.hpp  command_executor.hpp  command_initializer.hpp  commands.hpp  core.hpp  input.hpp  module.hpp  ncs.hpp  parameter.hpp  parameters.hpp  path.hpp  type.hpp  utility.hpp
include/ncs/command/: executor.hpp  initializer.hpp
include/ncs/input/: command.hpp  parameter.hpp
module/ncs/module/project/: commands.hpp  commands_impl.cpp  commands_impl.hpp  generator.cpp  generator.hpp  project.hpp
source/: main.cpp
source/ncs/: core.cpp
